# d2r-gear-optimiser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: breakpoints.yaml  gems.yaml  items.yaml  runes.yaml  runewords.yaml  sets.yaml  uniques.yaml
data/builds/: warlock_echoing_strike_mf.yaml  warlock_summoner.yaml
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
docs/plans/: implementation.md
docs/specs/: design.md
src/d2r_optimiser/: __init__.py
src/d2r_optimiser/cli/: __init__.py  _db_helpers.py  build.py  inv.py  main.py  run.py  validate.py
src/d2r_optimiser/core/: orchestrator.py  stats.py
src/d2r_optimiser/core/db/: __init__.py  schema.py  session.py
src/d2r_optimiser/core/formula/: __init__.py  base.py  common.py  warlock_echoing_strike.py  warlock_summoner.py
src/d2r_optimiser/core/models/: __init__.py  _common.py  build.py  item.py  loadout.py  rune.py  validation.py
src/d2r_optimiser/core/resolver/: __init__.py  runewords.py  sockets.py
src/d2r_optimiser/core/search/: __init__.py  engine.py  parallel.py  pruning.py
src/d2r_optimiser/core/validation/: __init__.py  validator.py
src/d2r_optimiser/loader/: __init__.py  _errors.py  breakpoints.py  builds.py  items.py  runewords.py  sets.py
src/d2r_optimiser/vision/: __init__.py  common.py  gemini_parser.py  openai_parser.py  router.py
tests/fixtures/: maxroll_echoing_strike.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_formula.py  test_loaders.py  test_models.py  test_orchestrator.py  test_resolver.py  test_search.py  test_validation.py
